added hammerjs for touch and browser animation module

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,9 @@
 image:
   file: Dockerfile
+
+vscode:
+  extensions:
+    - johnpapa.angular-essentials@0.6.3:kn6MdE8GXp3Nplq14ISQWg==
+    - alexiv.vscode-angular2-files@1.6.2:FWRDYYIh9NqVBX/S0KQ/Rw==
+    - johnpapa.Angular2@8.1.1:5n047Q4w8oMstLXJadb7tg==
+    - nrwl.angular-console@8.1.1:kyFh/6b7o4uofz+eea1rzQ==
