Added necessary extensions for development

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,3 +7,8 @@ vscode:
     - alexiv.vscode-angular2-files@1.6.2:FWRDYYIh9NqVBX/S0KQ/Rw==
     - johnpapa.Angular2@8.1.1:5n047Q4w8oMstLXJadb7tg==
     - nrwl.angular-console@8.1.1:kyFh/6b7o4uofz+eea1rzQ==
+    - infinity1207.angular2-switcher@0.2.0:GL1rkeac4oRCjq1uiNELAw==
+    - natewallace.angular2-inline@0.0.17:ojWcsbGsGnlz1DFYerNaFA==
+    - ktriek.ng-bootstrap-snippets@1.0.0:VUuHjE9V7Q9jWJGHFYuaag==
+    - eg2.tslint@1.0.44:3C/9/4VxeLePYcf3QXEZsQ==
+    - steoates.autoimport@1.5.3:ssEPucpXsRjqSbJX1bW0YA==
